Proyecto2/kubernetes/agro.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-client-grpc
  namespace: sopes1
spec:
  selector:
    matchLabels:
      app: golang-client-grpc
  template:
    metadata:
      labels:
        app: golang-client-grpc
    spec:
      containers:
      - name: golang-client-grpc
        image: cutzalluis/golang-client-grpc:0.5
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.3"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: golang-client-grpc-service #DNS
  namespace: sopes1
spec:
  selector:
    app: golang-client-grpc
  ports:
    - protocol: TCP
      port: 8080 # Entrada
      targetPort: 8080 # Salida
  type: NodePort #ClusterIP
