Proyecto2/kubernetes/boxeo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-server-boxeo
  namespace: sopes1
spec:
  selector:
    matchLabels:
      app: golang-server-boxeo
  template:
    metadata:
      labels:
        app: golang-server-boxeo
    spec:
      containers:
      - name: golang-server-boxeo
        image: cutzalluis/golang-server-boxeo:0.5
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.1"
        ports:
        - containerPort: 50053
---
apiVersion: v1
kind: Service
metadata:
  name: golang-server-boxeo #DNS
  namespace: sopes1
spec:
  selector:
    app: golang-server-boxeo
  ports:
    - protocol: TCP
      port: 50053
      targetPort: 50053
  type: NodePort #ClusterIP
