Proyecto2/kubernetes/ganadores.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: winn
  namespace: sopes1
spec:
  selector:
    matchLabels:
      app: winn
  template:
    metadata:
      labels:
        app: winn
    spec:
      containers:
      - name: winn
        image: cutzalluis/winn:0.6
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.1"
        ports:
        - containerPort: 9090  # Cambié el puerto para evitar conflictos
---
apiVersion: v1
kind: Service
metadata:
  name: winn-service #DNS del servicio
  namespace: sopes1
spec:
  selector:
    app: winn
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: NodePort  # Cambia a ClusterIP si no necesitas acceso externo
