Proyecto2/kubernetes/ingenieria.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-client-grpc
  namespace: sopes1
spec:
  selector:
    matchLabels:
      app: rust-client-grpc
  template:
    metadata:
      labels:
        app: rust-client-grpc
    spec:
      containers:
      - name: rust-client-grpc
        image: cutzalluis/rust-client-grpc:0.5
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.1"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: rust-client-service
  namespace: sopes1
spec:
  selector:
    app: rust-client-grpc
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: NodePort #ClusterIP
