Proyecto2/kubernetes/natacion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-server-natacion
  namespace: sopes1
spec:
  selector:
    matchLabels:
      app: golang-server-natacion
  template:
    metadata:
      labels:
        app: golang-server-natacion
    spec:
      containers:
      - name: golang-server-natacion
        image: cutzalluis/golang-server-natacion:0.5
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.1"
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: golang-server-natacion-service #DNS
  namespace: sopes1
spec:
  selector:
    app: golang-server-natacion
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: NodePort #ClusterIP
