Proyecto2/kubernetes/perdedores.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loser
  namespace: sopes1
spec:
  selector:
    matchLabels:
      app: loser
  template:
    metadata:
      labels:
        app: loser
    spec:
      containers:
      - name: loser
        image: cutzalluis/loser:0.6
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.1"
        ports:
        - containerPort: 9090  # Cambié el puerto para evitar conflictos
---
apiVersion: v1
kind: Service
metadata:
  name: loser-service #DNS del servicio
  namespace: sopes1
spec:
  selector:
    app: loser
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: NodePort  # Cambia a ClusterIP si no necesitas acceso externo
